--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
 testing
-my cheatsheets for Data analytics, from read,clean, EDA and lain lain (etc)
+my cheatsheets, Practice for Data analytics, from read,clean, EDA and machine learning
